test/conformance/chainsaw/imagevalidatingpolicies/context/resource/negative.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: negative
  labels:
    app: nginx
    env: testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      env: testing
  template:
    metadata:
      labels:
        app: nginx
        env: testing
    spec:
      containers:
      - name: nginx
        image: nginx:latest
